Update Агзамов Лаб 5.md

--- a/labs/lab05/report/Агзамов Лаб 5.md
+++ b/labs/lab05/report/Агзамов Лаб 5.md
@@ -212,7 +212,6 @@ mov y, eax
 
 С помощью команды touch создали файл lab5-1.asm.
 
-# compagzamov@fedora: / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
 
 С помощью F3 открыли файл lab5-1.asm для просмотра и убедились, что файл содержит текст программы.
 
@@ -337,7 +336,7 @@ f/lab5-1
 
 Рис.5.14.sam03
 
-# СУИС-2-2009 
+# ТЕРМИНАЛ 
 
 Введите строку:
 Проверка успешно пройдена!
