Update Агзамов Лаб 8.md

--- a/labs/lab08/report/Агзамов Лаб 8.md
+++ b/labs/lab08/report/Агзамов Лаб 8.md
@@ -206,7 +206,7 @@ Puc. 8.6. lab05
 
 Puc. 8.7. lab06
 
-Рассмотрели еще один пример программы которая выводит сумму чисел, которые передаются в программу как аргументы. Создали файл lab8-3.asm в каталоге $\sim / \operatorname{arch}-\mathrm{pc} / \mathrm{lab} 08$ и ввели в него текст программы из листинга 8.3.
+Рассмотрели еще один пример программы которая выводит сумму чисел, которые передаются в программу как аргументы. Создали файл lab8-3.asm в каталоге /arch-pc/lab08 и ввели в него текст программы из листинга 8.3.
 
 Создали исполняемый файл и запустили его, указав аргументы. Пример результата работы программы:
 ![img-3.jpeg](image/img-3.jpeg)
