Update Агзамов Лаб 8.md

--- a/labs/lab08/report/Агзамов Лаб 8.md
+++ b/labs/lab08/report/Агзамов Лаб 8.md
@@ -85,7 +85,7 @@ compagzamov@fedora:~/arch-pc/lab08$
 ```
 
 
-## Puc. 8.2. lab01
+Puc. 8.2. lab01
 
 При реализации циклов в NASM с использованием инструкции loop необходимо помнить о том, что эта инструкция использует регистр есх в качестве счетчика и на каждом шаге уменьшает его значение на единицу. В качестве примера рассмотрели программу, которая выводит значение регистра есх. Внимательно изучили текст программы (Листинг 8.1) и ввели его в файл lab8-1.asm.
 ![img-1.jpeg](image/img-1.jpeg)
