Update Агзамов Лаб 6.md

--- a/labs/lab06/report/Агзамов Лаб 6.md
+++ b/labs/lab06/report/Агзамов Лаб 6.md
@@ -165,20 +165,20 @@ compagzamov@fedora: /arch-pc/lab06\$ nasm -f elf lab6-1.asm ld -m elf i386 -o la
 /lab6-1
 
 В данном случае при выводе значения регистра еax мы ожидали увидеть число 10. Однако результатом стал символ j. Это произошло потому, что код символа 6 равен 00110110 в двоичном представлении (или 54 в десятичном представлении), а код символа $4-00110100$ (52). Команда add eax,ebx записала в регистр еax сумму кодов - 01101010 (106), что в свою очередь является кодом символа j (см. таблицу ASCII в приложении).
-![img-0.jpeg](image-img0.jpeg)
+![img-0.jpeg](image/img0.jpeg)
 
 Puc. 6.4. lab01
 Изменили текст программы и вместо символов, записали в регистры числа. Исправили текст программы (Листинг 6.1) следующим образом:
-![img-1.jpeg](image-img1.jpeg)
+![img-1.jpeg](image/img1.jpeg)
 
 Puc. 6.5. lab02
 
 Создали исполняемый файл и запустили его.
 Как и в предыдущем случае при исполнении программы мы не получили число 10. В данном случае вывелся символ с кодом 10. Код 10 в ASCII соответствует символу LF .
-![img-2.jpeg](image-img2.jpeg)
+![img-2.jpeg](image/img2.jpeg)
 
 Создали файл lab6-2.asm в том что каталоге, что и первый, и ввели в него текст программы из листинга 6.2.
-![img-3.jpeg](image-img3.jpeg)
+![img-3.jpeg](image/img3.jpeg)
 
 Puc. 6.7. lab03
 Создали исполняемый файл и запустили его.
@@ -191,7 +191,7 @@ Puc. 6.8. lab04
 В результате работы программы мы получили число 106. В данном случае, как и в первом, команда add скложила коды символов ‘ 6 ' и ‘ 4 ' $(54+52=106)$. Однако, в отличии от программы из листинга 6.1, функция iprintLF позволила вывести число, а не символ, кодом которого является это число.
 
 Аналогично предыдущему примеру изменили символы на числа. Заменили строки
-![img-4.jpeg](image-img4.jpeg)
+![img-4.jpeg](image/img4.jpeg)
 
 Puc. 6.9. lab05
 Создали исполняемый файл и запустили его. Различие iprint и iprintLF в том, что: первый выводит символы значения без перевода строки, а второй добавляет автоматический перевод строки (символ LF, код 10) строки.
