Update Агзамов Лаб 10.md

--- a/labs/lab10/report/Агзамов Лаб 10.md
+++ b/labs/lab10/report/Агзамов Лаб 10.md
@@ -159,7 +159,6 @@ compagzamov@fedora:~/work/arch-pc/lab10$ ./lab10-1
 ## Рисунок 6
 
 ```txt
-Введите строку для записи в файл: aavolodina
 compagzamov@fedora:~/work/arch-pc/lab10$ ls -l
 итого 40
 -rw-r--r--. 1 compagzamov compagzamov 3942 ноя 7 21:09 in_out.asm
@@ -401,7 +400,7 @@ compagzamov@fedora:~/work/arch-pc/lab10$
 
 ```markdown
 compagzamov@fedorav- /work/arch-pc/1ab18$ cat name.txt
-Mowa зовут Агамов Артур
+Mеня зовут Агамов Артур
 
 Рисунок 24
 
